add_library(OpenEXR STATIC
    ../../FreeImage/trunk/Source/OpenEXR/Half/eLut.h
    ../../FreeImage/trunk/Source/OpenEXR/Half/half.cpp ../../FreeImage/trunk/Source/OpenEXR/Half/half.h
    ../../FreeImage/trunk/Source/OpenEXR/Half/halfExport.h
    ../../FreeImage/trunk/Source/OpenEXR/Half/halfFunction.h
    ../../FreeImage/trunk/Source/OpenEXR/Half/halfLimits.h
    ../../FreeImage/trunk/Source/OpenEXR/Half/toFloat.h
    ../../FreeImage/trunk/Source/OpenEXR/Iex/Iex.h
    ../../FreeImage/trunk/Source/OpenEXR/Iex/IexBaseExc.cpp ../../FreeImage/trunk/Source/OpenEXR/Iex/IexBaseExc.h
    ../../FreeImage/trunk/Source/OpenEXR/Iex/IexErrnoExc.h
    ../../FreeImage/trunk/Source/OpenEXR/Iex/IexExport.h
    ../../FreeImage/trunk/Source/OpenEXR/Iex/IexForward.h
    ../../FreeImage/trunk/Source/OpenEXR/Iex/IexMacros.h
    ../../FreeImage/trunk/Source/OpenEXR/Iex/IexMathExc.h
    ../../FreeImage/trunk/Source/OpenEXR/Iex/IexNamespace.h
    ../../FreeImage/trunk/Source/OpenEXR/Iex/IexThrowErrnoExc.cpp ../../FreeImage/trunk/Source/OpenEXR/Iex/IexThrowErrnoExc.h
    ../../FreeImage/trunk/Source/OpenEXR/IexMath/IexMathFloatExc.cpp ../../FreeImage/trunk/Source/OpenEXR/IexMath/IexMathFloatExc.h
    ../../FreeImage/trunk/Source/OpenEXR/IexMath/IexMathFpu.cpp ../../FreeImage/trunk/Source/OpenEXR/IexMath/IexMathFpu.h
    ../../FreeImage/trunk/Source/OpenEXR/IexMath/IexMathIeeeExc.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmBaseConfig.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfAcesFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfAcesFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfArray.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfAutoArray.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfB44Compressor.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfB44Compressor.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfBoxAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfBoxAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfCRgbaFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfCRgbaFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfChannelList.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfChannelList.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfChannelListAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfChannelListAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfCheckedArithmetic.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfChromaticities.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfChromaticities.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfChromaticitiesAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfChromaticitiesAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfCompositeDeepScanLine.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfCompositeDeepScanLine.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfCompression.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfCompressionAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfCompressionAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfCompressor.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfCompressor.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfConvert.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfConvert.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepCompositing.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepCompositing.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepFrameBuffer.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepFrameBuffer.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepImageState.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepImageStateAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepImageStateAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepScanLineInputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepScanLineInputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepScanLineInputPart.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepScanLineInputPart.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepScanLineOutputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepScanLineOutputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepScanLineOutputPart.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepScanLineOutputPart.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepTiledInputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepTiledInputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepTiledInputPart.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepTiledInputPart.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepTiledOutputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepTiledOutputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepTiledOutputPart.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDeepTiledOutputPart.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDoubleAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDoubleAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDwaCompressor.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDwaCompressor.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfDwaCompressorSimd.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfEnvmap.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfEnvmap.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfEnvmapAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfEnvmapAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfExport.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfFastHuf.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfFastHuf.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfFloatAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfFloatAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfFloatVectorAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfFloatVectorAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfForward.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfFrameBuffer.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfFrameBuffer.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfFramesPerSecond.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfFramesPerSecond.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfGenericInputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfGenericInputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfGenericOutputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfGenericOutputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfHeader.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfHeader.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfHuf.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfHuf.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfIO.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfIO.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfInputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfInputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfInputPart.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfInputPart.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfInputPartData.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfInputPartData.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfInputStreamMutex.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfInt64.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfIntAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfIntAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfKeyCode.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfKeyCode.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfKeyCodeAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfKeyCodeAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfLineOrder.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfLineOrderAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfLineOrderAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfLut.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfLut.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfMatrixAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfMatrixAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfMisc.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfMisc.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfMultiPartInputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfMultiPartInputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfMultiPartOutputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfMultiPartOutputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfMultiView.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfMultiView.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfName.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfNamespace.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfOpaqueAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfOpaqueAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfOptimizedPixelReading.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfOutputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfOutputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfOutputPart.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfOutputPart.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfOutputPartData.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfOutputPartData.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfOutputStreamMutex.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPartHelper.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPartType.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPartType.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPixelType.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPizCompressor.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPizCompressor.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPreviewImage.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPreviewImage.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPreviewImageAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPreviewImageAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPxr24Compressor.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfPxr24Compressor.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRational.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRational.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRationalAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRationalAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRgba.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRgbaFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRgbaFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRgbaYca.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRgbaYca.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRle.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRle.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRleCompressor.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfRleCompressor.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfScanLineInputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfScanLineInputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfSimd.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfStandardAttributes.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfStandardAttributes.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfStdIO.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfStdIO.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfStringAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfStringAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfStringVectorAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfStringVectorAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfSystemSpecific.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfSystemSpecific.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTestFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTestFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfThreading.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfThreading.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTileDescription.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTileDescriptionAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTileDescriptionAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTileOffsets.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTileOffsets.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledInputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledInputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledInputPart.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledInputPart.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledMisc.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledMisc.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledOutputFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledOutputFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledOutputPart.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledOutputPart.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledRgbaFile.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTiledRgbaFile.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTimeCode.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTimeCode.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTimeCodeAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfTimeCodeAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfVecAttribute.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfVecAttribute.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfVersion.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfVersion.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfWav.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfWav.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfXdr.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfZip.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfZip.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfZipCompressor.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/ImfZipCompressor.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/b44ExpLogTable.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmImf/b44ExpLogTable.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf/dwaLookups.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThread.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThread.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThreadExport.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThreadForward.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThreadMutex.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThreadMutex.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThreadNamespace.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThreadPool.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThreadPool.h
    ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThreadSemaphore.cpp ../../FreeImage/trunk/Source/OpenEXR/IlmThread/IlmThreadSemaphore.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathBox.cpp ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathBox.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathBoxAlgo.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathColor.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathColorAlgo.cpp ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathColorAlgo.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathEuler.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathExc.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathExport.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathForward.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathFrame.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathFrustum.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathFrustumTest.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathFun.cpp ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathFun.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathGL.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathGLU.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathHalfLimits.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathInt64.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathInterval.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathLimits.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathLine.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathLineAlgo.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathMath.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathMatrix.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathMatrixAlgo.cpp ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathMatrixAlgo.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathNamespace.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathPlane.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathPlatform.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathQuat.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathRandom.cpp ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathRandom.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathRoots.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathShear.cpp ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathShear.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathSphere.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathVec.cpp ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathVec.h
    ../../FreeImage/trunk/Source/OpenEXR/Imath/ImathVecAlgo.h
    ../../FreeImage/trunk/Source/OpenEXR/OpenEXRConfig.h
)
target_include_directories(OpenEXR PUBLIC
    ../../FreeImage/trunk/Source/OpenEXR
    ../../FreeImage/trunk/Source/OpenEXR/Half
    ../../FreeImage/trunk/Source/OpenEXR/Iex
    ../../FreeImage/trunk/Source/OpenEXR/IexMath
    ../../FreeImage/trunk/Source/OpenEXR/IlmImf
    ../../FreeImage/trunk/Source/OpenEXR/IlmThread
    ../../FreeImage/trunk/Source/OpenEXR/Imath
    ../../FreeImage/trunk/Source/ZLib
)

target_link_libraries(OpenEXR PUBLIC
    Qt::Core
    Qt::Gui
)

if(UNIX AND NOT APPLE)
    target_compile_definitions(OpenEXR PRIVATE
        __ANSI__
    )

    target_compile_options(OpenEXR PRIVATE
        -std=c++11
        -std=gnu++11
    )
endif()
IF(WIN32)
    set(CMAKE_CXX_STANDARD 14)
    target_compile_definitions(OpenEXR PRIVATE
        /std:c++14
    )
endif()

if(ANDROID)
    target_include_directories(OpenEXR PUBLIC
        $(ANDROID_NDK_ROOT)/sources/cxx-stl/llvm-libc++/include
        $(ANDROID_NDK_ROOT)/sources/cxx-stl/llvm-libc++/include/backward
        $(ANDROID_NDK_ROOT)/sysroot/usr/include
    )

    target_compile_definitions(OpenEXR PRIVATE
        DISABLE_PERF_MEASUREMENT
        __ANDROID_API__=28
        __ANSI__
    )

    target_compile_options(OpenEXR PRIVATE
        --sysroot
        -Wa,--noexecstack
        -Werror=format-security
        -Wformat
        -Wno-attributes
        -fPIE
        -ffast-math
        -ffunction-sections
        -fno-strict-aliasing
        -fopenmp
        -fstack-protector-strong
        -funwind-tables
        -no-canonical-prefixes
        -std=c++11
    )
endif()

if(ANDROID AND ANDROID_TARGET_ARCH___contains___armeabi-v7a)
    target_include_directories(OpenEXR PUBLIC
        $(ANDROID_NDK_ROOT)/sysroot/usr/include/arm-linux-androideabi
    )
endif()

if(ANDROID AND ANDROID_TARGET_ARCH___contains___arm64-v8a AND NOT ANDROID_TARGET_ARCH___contains___armeabi-v7a)
    target_include_directories(OpenEXR PUBLIC
        $(ANDROID_NDK_ROOT)/sysroot/usr/include/aarch64-linux-android
    )
endif()

if(APPLE)
    target_compile_definitions(OpenEXR PRIVATE
        __ANSI__
    )

    target_compile_options(OpenEXR PRIVATE
        -Wc++11-narrowing
        -Wno-ctor-dtor-privacy
        -std=c++11
        -stdlib=libc++
    )
endif()

install(TARGETS OpenEXR
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
